# nyctea

./: .gitignore  .markdownlint.yaml  .pre-commit-config.yaml  CHANGELOG.md  DEVELOPMENT.md  README.md  SPRINT_1_FINAL_STATUS.md  TESTING_COMPLETE.md  justfile  pyproject.toml  zensical.toml
.claude/: CLAUDE.md
.github/: markdown-link-check-config.json  pull_request_template.md
.github/workflows/: audit.yml  build.yml  ci.yml  docs.yml  pre-commit.yml  publish.yml
docs/: QUICK_REFERENCE.md  README.md  README_v0.2.md  index.md  nyctea-refactor-plan.md
docs/api/: engine.md  index.md  ingest.md  registry.md  schema.md
docs/development/: README.md  REFACTOR_SUMMARY.md  RELEASING.md  SPRINT_1_COMPLETE.md  TYPE_CHECKING_NOTES.md  adr-pipeline-design.md  adr-validation-api.md  breaking-changes.md  index.md  roadmap.md
docs/development/decisions/: adr-on-failure.md  adr-pipeline-design.md  adr-validation-api.md
docs/guides/: features.md  index.md  quickstart.md  registry.md
docs/stylesheets/: theme.css
examples/: __init__.py  demo_schema.json  demo_schema.py  demo_schema.yaml  demo_v2.py  demo_v2_notebook.py
examples/patient_project/: __init__.py  data.csv  functions.py  patient_project_nb.py  run_validation.py  schema.yaml
examples/titanic_example/: __init__.py  functions.py  run_validation.py  schema.yaml  titanic_nb.py
scripts/: README.md  ci-build.sh  ci-full.sh  ci-lint.sh  release.sh  test-all-versions.sh  test-all.sh
src/nyctea/: __init__.py  exceptions.py
src/nyctea/cli/: main.py
src/nyctea/engine/: __init__.py  context.py  factory.py  observability.py  phases.py  pipeline.py  results.py  utils.py  validate.py
src/nyctea/functions/: __init__.py  registry.py
src/nyctea/ingest/: __init__.py  readers.py
src/nyctea/plugins/: __init__.py  base.py  column.py  decorators.py  frame.py  registry.py
src/nyctea/plugins/builtins/: __init__.py  checks.py  parsers.py  register.py
src/nyctea/schema/: __init__.py  loader.py  model.py  validator.py
src/nyctea/utils/: logger.py
tests/: README.md  test_exceptions.py  test_validation_minimal.py
tests/engine/: test_phases.py  test_pipeline.py
tests/plugins/: test_base.py  test_column.py  test_decorators.py  test_registry.py
tests/plugins/builtins/: test_parsers.py
