[project]
name = "nyctea"
version = "0.2.0"
description = "Polars-based data validation library with an extensible OOP plugin architecture"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "Yannick Vinkesteijn" }
]
keywords = ["polars", "validation", "data", "schema", "pydantic", "etl"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "polars>=1.36.1",
    "pydantic>=2.12.5",
    "pyyaml>=6.0.0",
]

[project.urls]
Homepage = "https://github.com/yannick-vinkesteijn/nyctea"
Repository = "https://github.com/yannick-vinkesteijn/nyctea"
Issues = "https://github.com/yannick-vinkesteijn/nyctea/issues"

[build-system]
requires = ["uv_build>=0.9.17,<0.10.0"]
build-backend = "uv_build"

[project.optional-dependencies]
nb = [
    "marimo>=0.20.4",
    "pyzmq>=27.1.0",
]

[dependency-groups]
dev = [
    "pre-commit>=4.5.0",
    { include-group = "lint" },
    { include-group = "security" },
    { include-group = "test" },
    { include-group = "docs" },
]
lint = [
    "ruff>=0.14.8",
    "ty>=0.0.15",
]
security = [
    "uv-secure>=0.15.4",
]
test = [
    "pytest>=9.0.2",
    "pytest-cov>=6.0.0",
]
docs = [
    "zensical>=0.0.15",
]

# --- Tool Configuration ---

[tool.ruff]
line-length = 120
target-version = "py311"
exclude = [
    "examples/",
    "docs/",
    "scripts/",
]

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "COM812",  # Trailing comma missing — conflicts with ruff formatter
    "ISC001",  # Implicit string concat on single line — conflicts with ruff formatter
    "D203",    # One blank line before class docstring — conflicts with D211
    "D213",    # Multi-line docstring summary on second line — conflicts with D212
    "E501",    # Line length regulated by formatter
    "TD002",   # Missing author in TODO
    "TD003",   # Missing issue link on the line following this TODO
    "TRY003",  # Avoid specifying long messages outside the exception class
    "SIM102",  # Use a single if statement instead of nested if statements
    "SIM108",  # Use ternary operator
    "EM101",   # Exception string literals — short messages are fine
    "EM102",   # Exception f-string literals — common pattern
    "ANN401",  # Disallow Any in **kwargs — **kwargs: Any is standard
    "FBT001",  # Boolean-typed positional argument — too strict
    "FBT002",  # Boolean default positional argument — too strict
    "FBT003",  # Boolean positional value in function call — too strict
    "TRY301",  # Abstract raise to inner function — unnecessary
    "S101",    # Use of assert — used for type narrowing
    "PLC0415", # Import not at top level — allowed for circular import prevention
    "ARG002",  # Unused method argument — intentional for interface conformance
    "PLR0913", # Too many function arguments — acceptable for plugin decorators
    "TC002",   # Move third-party import to TYPE_CHECKING — kept at runtime for clarity
]
fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.isort]
known-first-party = ["nyctea"]

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.lint.flake8-type-checking]
strict = true

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "S101",    # Use of assert
    "D100",    # Missing docstring in public module
    "D101",    # Missing docstring in public class — test classes
    "D102",    # Missing docstring in public method — test methods
    "D103",    # Missing docstring in public function
    "D104",    # Missing docstring in public package
    "D205",    # Blank line between summary and description — not needed in tests
    "ANN",     # Type annotations
    "INP001",  # Implicit namespace package
    "PLR2004", # Magic value in comparison — expected in test assertions
    "ERA001",  # Commented-out code — section dividers in test files
    "PT012",   # pytest.raises block should contain single statement
    "RUF043",  # Unescaped regex metacharacters in match= — acceptable in tests
]
"examples/**/*.py" = [
    "INP001",  # Implicit namespace package
    "T201",    # print() statements
    "D100",    # Missing docstring in public module
    "D103",    # Missing docstring in public function
]
"src/nyctea/__init__.py" = [
    "E402",    # Module-level import not at top — configure_logging() must run first
    "RUF022",  # __all__ not sorted — ruff auto-sort strips comments
]
"src/nyctea/cli/__init__.py" = ["D104"]  # Package docstring not needed for CLI
"src/nyctea/cli/main.py" = ["T201"]      # print() is intentional in CLI output
"src/nyctea/utils/__init__.py" = [
    "TID252",  # Relative import — re-export from submodule
    "D104",    # Package docstring not needed
]
# Legacy monolith and functions module — scheduled for removal in Step 7
"src/nyctea/engine/validate.py" = [
    "C901",    # Too complex
    "PLR0911", # Too many return statements
    "PLR0912", # Too many branches
    "PLR0915", # Too many statements
    "SIM118",  # Use key in dict — legacy code
    "S608",    # SQL injection false positive
    "RUF059",  # Unused unpacked variable
    "RUF005",  # List concatenation style
    "PLR2004", # Magic value in comparison
    "TRY300",  # Consider else block
]
"src/nyctea/functions/**/*.py" = [
    "C901",    # Too complex
    "PLR0912", # Too many branches
    "SLF001",  # Private member access
    "D107",    # Missing __init__ docstring
    "F821",    # Undefined name — type var used at runtime
]
"src/nyctea/functions/__init__.py" = [
    "TID252",  # Relative imports — legacy module
    "I001",    # Import sorting — legacy module
    "RUF022",  # __all__ sorting — legacy module
]
"*_nb.py" = [
    "E402",    # Module level import not at top of file
    "F401",    # Imported but unused
    "F403",    # from module import * used
    "T201",    # print() statements
    "S101",    # Use of assert
    "D100",    # Missing docstring in public module
    "D103",    # Missing docstring in public function
    "ANN",     # Type annotations
    "PLC0415", # import not at top-level (marimo cells use inline imports)
]

[tool.ruff.format]
quote-style = "double"
docstring-code-format = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = [
    "-ra",
    "-q",
    "--strict-config",
    "--strict-markers",
    "--import-mode=importlib",
]
xfail_strict = true

[tool.ty.src]
# System A (engine + function registry) is being rewritten — exclude until removed
exclude = [
    "src/nyctea/engine/**",
    "src/nyctea/functions/**",
]

[tool.ty.environment]
python-version = "3.11"

[tool.ty.rules]
unused-ignore-comment = "warn"
possibly-missing-attribute = "error"
possibly-missing-import = "error"
invalid-return-type = "error"
invalid-argument-type = "error"
division-by-zero = "error"
redundant-cast = "warn"
invalid-method-override = "warn"

[tool.uv-secure.maintainability_criteria]
forbid_yanked = true
forbid_archived = true
forbid_quarantined = true
